Attempt to prevent browser pinch zoom on iOS.

--- a/platform/app/src/App.css
+++ b/platform/app/src/App.css
@@ -1,3 +1,4 @@
 body {
   overscroll-behavior-y: contain;
+  touch-action: pan-x pan-y;
 }
